--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ RSS Feed: https://feeds.feedburner.com/Free-templateco
   <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
 
   <link rel="stylesheet" href="css/aos.css">
-  <link href="css/jquery.mb.YTPlayer.min.css" media="all" rel="stylesheet" type="text/css">
+  <!-- <link href="css/jquery.mb.YTPlayer.min.css" media="all" rel="stylesheet" type="text/css"> -->
 
   <link rel="stylesheet" href="css/style.css">
 
