--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ RSS Feed: https://feeds.feedburner.com/Free-templateco
 
 
     <div class="intro-section" id="home-section">
-      <video playsinline autoplay muted loop poster="images/bg_2.jpg" id="bgvid">
+      <video playsinline autoplay muted loop id="bgvid">
         <source src="background1.mp4" type="video/mp4">
       </video>
       <div class="container">
