--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@ RSS Feed: https://feeds.feedburner.com/Free-templateco
           <div class="col-md-12">
             <div class=" pt-5">
               <p class="copyright"><small>&copy;
-                  <script>document.write(new Date().getFullYear());</script> SAİT BAL Spor Kulübü. Tüm Hakları Saklıdır.
+                  <script>document.write(new Date().getFullYear());</script> FUEM Soft. Tüm Hakları Saklıdır.
                   </small></p>
             </div>
           </div>
