--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ RSS Feed: https://feeds.feedburner.com/Free-templateco
                 <li><a href="#classes-section" class="nav-link">Derslerimiz</a></li>
                 <li><a href="#schedule-section" class="nav-link">Program</a></li>
                 <li><a href="#trainer-section" class="nav-link">Eğitmenimiz</a></li>
-                <li><a href="#trophies-section" class="nav-link">Kupalarımız</a></li>
+                <li><a href="#trophies-section" class="nav-link">Başarılarımız</a></li>
                 <li><a href="#about-section" class="nav-link">Hakkımızda</a></li>
                 <li><a href="#contact-section" class="nav-link">İletişim</a></li>
               </ul>
